style: toFloat/Caculator 除法分支改用 valueOf/Double.toString 替代废弃装箱构造